crezione div toolbar

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 
         <!-- TOOLBAR -->
 
-            <div class="toolbar">
+            <div class="toolbar flex">
                 <div class="left-toolbar"></div>
                 <div class="middle-toolbar"></div>
-                
+                <div class="right-toolbar"></div>
             </div>
 
         <!-- /TOOLBAR -->
