completata left toolbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/6ddcf2da8a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -117,7 +118,16 @@
         <!-- TOOLBAR -->
 
             <div class="toolbar flex">
-                <div class="left-toolbar"></div>
+                <div class="left-toolbar flex">
+                    <div>
+                        <i class="fa-solid fa-microphone"></i>
+                        <p>Mute &#x2038;</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-video"></i>
+                        <p>Stop Video &#x2038; </p>
+                    </div>
+                </div>
                 <div class="middle-toolbar"></div>
                 <div class="right-toolbar"></div>
             </div>
