--- a/index.html
+++ b/index.html
@@ -128,8 +128,45 @@
                         <p>Stop Video &#x2038; </p>
                     </div>
                 </div>
-                <div class="middle-toolbar"></div>
-                <div class="right-toolbar"></div>
+
+                <div class="middle-toolbar flex">
+                    <div>
+                        <i class="fa-solid fa-user-plus"></i>
+                        <p>Invite</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-users"></i>
+                        <p>Manage Partecipants</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-chart-simple"></i>
+                        <p>Polling</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-share-from-square"></i>
+                        <p>Share Screen</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-comments"></i>
+                        <p>&#x2038; Chat</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-record-vinyl"></i>
+                        <p>Record</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-table-cells-large"></i>
+                        <p>Breakout Rooms</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-ellipsis"></i>
+                        <p>More</p>
+                    </div>
+
+                </div>
+                <div class="right-toolbar flex">
+                    <p>End Meeting</p>
+                </div>
             </div>
 
         <!-- /TOOLBAR -->
