--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <p>Polling</p>
                     </div>
                     <div>
-                        <i class="fa-solid fa-share-from-square"></i>
+                        <i class="fa-solid fa-share-from-square" id="share-button"></i>
                         <p>Share Screen</p>
                     </div>
                     <div>
