aggiunto header con icone

--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
             <div class="container">
 
                 <header>
-                    <div></div>
+                    <div class="wrapper-header">
+                        <div class="icons flex">
+                            <div class="speaker">
+                                <i class="fa-solid fa-table-cells-large"></i>
+                                <span>Speaker View</span>
+                            </div>
+                            <div class="arrow">
+                                <i class="fa-solid fa-maximize"></i>
+                               
+                            </div>
+                        </div>
+                    </div>
                 </header>
 
                 <div class="content">
